- BUG: Inserting a history log message in the commit dialog when 
       bugtraq:append is set to 'false' inserted the bug ID and the commit
       message reversed. (Stefan)
- BUG: The slider positions could be restored incorrectly in the commit and
       log dialog. (Stefan)
- BUG: The merge ranges were not properly sorted for a rev-range merge. (Stefan)
- CHG: Client-side hook scripts are now called with the predefined parameters
       in a predefined order. (Stefan)


Version 1.5.0-alpha1
- NEW: Various new layout options in revision graph. (Stefan Fuhrmann)
- NEW: Log content will be cached. See issue #45 for details. (Stefan Fuhrmann)
- NEW: Repository properties will be cached. Reduces or even eliminates 
       latency in log dialog and revison graph. (Stefan Fuhrmann)
- NEW: Show log and revision graph w/o repository connection. (Stefan Fuhrmann)
- NEW: A warning is shown when a modified file is about to be deleted
       in the various dialogs. See issue #274 for details. (Stefan)
- NEW: External diff/merge programs can be specified by mime-type,
       not just by extension. See issue #115 for details. (Stefan)
- NEW: Search by "whole word" and wrap around at the bottom of
       the files when the word isn't found. 
       A history of previous searches is shown in the new combobox.
       The search will now start either at where the previous search
       stopped, or the selected line if there is one. Bringing up
       the search dialog will force the search to start at the top.
       See issue #271 for details. (Jeremy Whitby, Stefan)
- NEW: Client-side hook scripts. See issue #137 and #322 for details. (Stefan)
- NEW: Integration with repo viewers. See issue #201 for details. (Stefan)
- NEW: Applying a patchfile from clipboard. Directly from the explorer
       context menu as well as from the TortoiseMerge "Open" dialog.
       See issue #270 for details. (Stefan)
- NEW: The log dialog shows the number of revisions, start and end revision